--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -73,7 +73,7 @@
                     <h2>Filter</h2>
                     <form id="filterForm">
                         <fieldset>
-                            <legend>Select Columns to Display</legend>
+                            <legend>Columns to Display</legend>
                             <label style="display:block;"><input type="checkbox" name="columns" value="company_name" checked> Company Name</label>
                             <label style="display:block;"><input type="checkbox" name="columns" value="title" checked> Title</label>
                             <label style="display:block;"><input type="checkbox" name="columns" value="status" checked> Status</label>
@@ -94,7 +94,7 @@
                             <label style="display:block;" for="filter_date_to">To:</label>
                             <input type="date" id="filter_date_to" name="filter_date_to" style="display:block; margin-bottom:10px;">
                         </fieldset>
-                        <div style="margin-top: 15px;">
+                        <div class="filter-div" style="margin-top: 15px;">
                             <button type="submit" class="apply-filter">Apply Filter</button>
                             <button type="button" class="reset-filter">Reset Filter</button>
                         </div>
