--- a/static/global.css
+++ b/static/global.css
@@ -7,6 +7,13 @@ body {
     padding: 0;
 }
 
+a{
+    text-decoration: none;
+}
+a:hover{
+    color:#8C52FF;
+}
+
 .title-section {
     display: flex;
     justify-content: center;
@@ -53,7 +60,7 @@ body {
     position: absolute;
     right: 0;
     background-color: white;
-    width: 120px;
+    width: 150px;
     border-radius: 12px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -69,13 +76,14 @@ body {
     visibility: visible;
 }
 
+
 .logout-btn, .delete-account-btn {
+    display: flex;
+    justify-content: center;
     width: 100%;
     border: none;
     background: none;
-    font-size: 18px;
-    padding: 15px;
-    text-align: left;
+    font-size: 16px;
     cursor: pointer;
 }
 
@@ -91,8 +99,19 @@ body {
 .delete-account-btn:visited,
 .delete-account-btn:hover,
 .delete-account-btn:active{
-    color: black;
+    color: red;
     text-decoration: none;  
+}
+
+
+.logout-btn{
+    padding-bottom:8px;
+    border-bottom: 1px solid black;
+    
+}
+.delete-account-btn{
+    padding-top: 5px;
+    color: black;
 }
 
 .action-section {
