--- a/static/global.css
+++ b/static/global.css
@@ -211,6 +211,7 @@ a:hover{
 .table-row span {
     flex: 1;
     text-align: center;
+    padding: 0 10px;
 }
 
 .table-row input {
@@ -218,7 +219,7 @@ a:hover{
 }
 
 .status-dropdown{
-    margin: 5px;
+    margin: 0 40px;
     padding: 5px;
     font-family: "Julius Sans One", serif;
     font-size: 18px;
