--- a/static/signup.css
+++ b/static/signup.css
@@ -4,7 +4,7 @@ body{
     font-style: normal;
     font-size: 24px;
     background: linear-gradient(120deg, #8C52FF, #5CE1E6);
-    height: 100vh;  
+    /* height: 100vh;   */
     display: flex;
     margin: 0;
     padding: 0;
@@ -35,7 +35,7 @@ body{
     font-size: 32px;
     text-align: center;
     margin-bottom: 25px;
-
+    margin-top: 0;
 }
 
 .sign-up-form{
@@ -56,7 +56,7 @@ form{
 }
 
 form label{
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
     margin:10px 0 5px;
 }
@@ -75,12 +75,27 @@ form label{
     min-width: 200px;     /* Ensures a reasonable minimum width on smaller screens */
 }
 
+.first-input-field{
+    width: 18vw;
+    margin-top: 5px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+    border-radius: 8px;
+    outline: none;
+    transition: border 0.3s ease-in-out;
+}
+
+.first-input-field:focus{
+    border-color: #8C52FF;
+    box-shadow: 0 0 5px rgba(140, 82, 255, 0.5);
+}
 /* Existing input-field styling remains unchanged */
 .input-field {
     margin-top: 5px;
-    padding: 15px;
+    padding: 10px;
     border: 1px solid #ccc;
-    font-size: 18px;
+    font-size: 14px;
     border-radius: 8px;
     outline: none;
     transition: border 0.3s ease-in-out;
