--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -36,5 +36,26 @@
                 </form>
             </div>  
         </div>
+
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                const flashData = JSON.parse('{{ session.pop("flash_message", "{}") | tojson | safe }}');
+        
+                if (flashData.message) {
+                    const flashDiv = document.createElement("div");
+                    flashDiv.classList.add("flash-message", flashData.category);
+                    flashDiv.innerText = flashData.message;
+                    document.body.appendChild(flashDiv);
+        
+                    // Auto-hide after 3 seconds
+                    setTimeout(() => {
+                        flashDiv.style.opacity = "0";
+                        setTimeout(() => flashDiv.remove(), 500);
+                    }, 3000);
+                }
+            });
+        </script>
+        
+        
     </body>
 </html>
