--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -13,6 +13,19 @@
     
     <body>
         <div class="container">
+
+            <div class="flash-container">
+                <ul class="flash-messages">
+                    {% if flash_message %}
+                        <li class="{{ flash_message['category'] }}">
+                            {{ flash_message['message'] }}
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+            
+
+            
             <div class="login_body">
                 <head>
                     <img class="logo-bg" src="{{ url_for('static', filename='Images/J-removebg.png') }}">
@@ -39,19 +52,15 @@
 
         <script>
             document.addEventListener("DOMContentLoaded", function () {
-                const flashData = JSON.parse('{{ session.pop("flash_message", "{}") | tojson | safe }}');
-        
-                if (flashData.message) {
-                    const flashDiv = document.createElement("div");
-                    flashDiv.classList.add("flash-message", flashData.category);
-                    flashDiv.innerText = flashData.message;
-                    document.body.appendChild(flashDiv);
-        
-                    // Auto-hide after 3 seconds
+                let flashMessage = document.querySelector(".flash-messages li");
+                if (flashMessage) {
                     setTimeout(() => {
-                        flashDiv.style.opacity = "0";
-                        setTimeout(() => flashDiv.remove(), 500);
+                        flashMessage.style.opacity = "0";
+                        setTimeout(() => flashMessage.remove(), 500);
                     }, 3000);
+        
+                    // Make an AJAX request to clear session flash message immediately
+                    fetch("/clear_flash", { method: "POST" });
                 }
             });
         </script>
