--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -128,7 +128,7 @@
             </div>
         </div>
 
-        <div class="delete-job-container" id="deleteJobPop  " style="display: none;">
+        <div class="delete-job-container" id="deleteJobPopUp" style="display: none;">
             <span>Do you want to delete this job?</span>
             <div class="job-delete-btn">
                 <button type="submit" class="confirm-delete" id="confirmDelete">Confirm</button>
